Fix footer menu spacing

--- a/assets/custom.css
+++ b/assets/custom.css
@@ -99,3 +99,19 @@ header span{
     width: 65%;
     margin: 0 auto;
 }
+
+/* footer */
+
+.footer__block-type--menu{
+    display: flex;
+    justify-content: center;
+}
+
+.footer__block-type--logo h3, .footer__block-type--logo p{
+    text-align:center;
+}
+
+.footer .image-bar__content{
+    margin: 0 auto;
+    margin-bottom:1.5em;
+}
